# medi_map

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: api.ts
frontend/src/lib/components/: FacilityDetail.svelte  Map.svelte  NearbyList.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  app.css
frontend/static/: robots.txt  sitemap.xml
